# TODOapi-1

./: .dockerignore  .env.test  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: integration-tests.yml  lint_and_typecheck.yml  unit-tests.yml
TODOapp/: .env.template  main.py  prestart.sh  run
TODOapp/alembic/: env.py
TODOapp/alembic/versions/: 2024_07_12_0105-efa7f31234e1_create_user_table.py  2024_07_12_0115-0ec284cc86d8_create_task_table.py  2024_07_12_1231-d21204238804_add_name_and_b_date_to_user_table.py  2024_07_22_0159-7bad295bb257_add_role_field_to_user.py
TODOapp/api/: __init__.py  deps.py  http_exceptions.py
TODOapp/api/auth/: auth.py  utils.py  validation.py
TODOapp/api/schemas/: __init__.py  task.py  token.py  user.py
TODOapp/api/views/: task.py  user.py
TODOapp/core/: config.py
TODOapp/core/crud/: task.py  user.py
TODOapp/core/models/: __init__.py  base.py  db_helper.py  task.py  user.py
TODOapp/core/utils/: __init__.py  camel_case_to_snake_case.py  jwt.py  on_startup_scripts.py
docker-build/: Dockerfile
tests/: README.md  conftest.py  helpers.py  test_prestart.sh
tests/integration_tests/: conftest.py  create_update_scenarios.py  database.py  factories.py  test_users.py  test_users_success.py
tests/integration_tests/test_failure/: conftest.py  test_auth_failure.py  test_task_failure.py  test_user_failure.py
tests/integration_tests/test_success/: test_auth_success.py  test_task_success.py  test_users_success.py
tests/integration_tests/test_user_falture/: conftest.py  test_user_failure.py
tests/integration_tests/test_user_success/: conftest.py  test_users_success.py
tests/integration_tests/test_users_success/: test_users_success.py
tests/unit_tests/: conftest.py  test_api_view_task.py  test_api_view_user.py  test_auth_utils.py  test_auth_validation.py  test_camel_case_to_snake_case.py  test_crud_user.py  test_deps.py  test_http_exceptions.py  test_on_startup_scripts.py  test_utils_jwt.py
