[project]
name = "TODOapp"
version = "0.1.0"
description = "TODOapp pet-project"
authors = [
    { name="Ivan Filippov", email="jam089@mail.ru" }
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = {extras = ["email"], version = "^2.8.2"}
pydantic-settings = "^2.3.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
alembic = "^1.13.2"
bcrypt = "^4.1.3"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.2"
pytest-cov = "^6.2.1"
httpx = "^0.28.1"
pytest-repeat = "^0.9.4"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.14.1"
pytest-asyncio = "^1.0.0"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "TODOapp",
]
env_files = [
    ".env.test",
]
asyncio_mode = "auto"

